# Template

./: .gitignore  CMakeLists.txt  MANIFEST.in  setup.py
HelloWorld/: __init__.py
src/: HelloWorld.cpp  HelloWorld.h  HelloWorld_py.cpp  HelloWorld_py.h
